2004-06-26    <bilboed@rider.bilboed.homelinux.org>

	* src/pitivi-viewercontroller.c: 
	* src/pitivi-viewercontroller.h: Converted PitiviViewerController to derivate of PitiviWindows

	* src/pitivi-viewerwindow.c:
	* src/pitivi-viewerwindow.h: Converted PitiviViewerWindow to derivate of PitiviWindows

	* src/pitivi-sourcelistwindow.c: 
	* src/pitivi-sourcelistwindow.h: Converted PitiviSourceListWindow to derivate of PitiviProjectWindows

	* src/pitivi-timelinewindow.c: 
	* src/pitivi-timelinewindow.h: Converted PitiviTimelineWindow to derivate of PitiviProjectWindows

2004-06-25    <bilboed@localhost>

	* src/pitivi-effectswindow.c (pitivi_effectswindow_new): modified to take PitiviMainApp as parameter

	* src/pitivi-mainapp.h (struct _PitiviMainApp): moved the windows to PitiviMainAppPrivate

	* src/pitivi-effectswindow.c: 
	* src/pitivi-effectswindow.h: Converted PitiviEffectsWindow to derivate of PitiviWindows

	* src/pitivi-toolboxwindow.c: 
	* src/pitivi-toolboxwindow.h: 
	* src/pitivi-newprojectwindow.c: 
	* src/pitivi-newprojectwindow.h: 
	* src/pitivi-windows.c:
	* src/pitivi-windows.h:
	* src/pitivi-projectwindows.c:
	* src/pitivi-projectwindows.h: Added PitiviWindows and PitiviProjectWindows classes
	Converted PitiviToolboxWindow and PitiviNewProjectWindow to be derivate of PitiviWindows

	
2004-05-28    <ez3kiel@localhost>

	* src/pitivi-projectsettings.c (pitivi_projectsettings_list_make): Creation de la liste de PitiviProjectSettings par default insere dans la PitiviMainApp

	* src/pitivi-newprojectwindow.c (pitivi_newprojectwindow_add_setting): Ajoute un nouveau setting dans la liste des reglages de la fenetre NewProjectWindow et un nouveau PitiviProjectSettings dans la PitiviMainApp

	* src/pitivi-mainapp.c (pitivi_mainapp_add_newsetting):  Ajoute un nouveau PitiviProjectSettings dans la liste existante

2004-06-05    <nemo@localhost>

	* src/pitivi-pitivisettings.c (all) : creation des settings globaux de l application
