@@ -522,7 +522,7 @@ pitivi_timelinewindow_get_type (void)
 	0,			/* n_preallocs */
 	pitivi_timelinewindow_instance_init	/* instance_init */
       };
-      type = g_type_register_static (PITIVI_WINDOWS_TYPE,
+      type = g_type_register_static (PITIVI_PROJECTWINDOWS_TYPE,
 				     "PitiviTimelineWindowType", &info, 0);
     }
 
